[package]
name = "fluctlight-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluctlight-mod-interface = { path = "../fluctlight-mod-interface" }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync"] }
url = "2.2"
smallvec = "1.8"
libloading = "0.7"
