[package]
name = "fluctlight-main"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
description = "Fluctlight Matrix federation network server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "$auto, fluctlight-router (= 0.1.0~alpha.8)"

[dependencies]
fluctlight-mod-interface = { path = "../fluctlight-mod-interface" }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "signal"] }
url = "2.2"
libloading = "0.7"
tokio-inotify = "0.4"
futures-util = { version = "0.3.21", default-features = false, features = ["compat"] }
tls-listener = { version = "0.5", features = ["hyper-h1", "rustls"] }
tokio-rustls = "0.23"
