[package]
name = "fluctlight-router"
version = "0.1.0-alpha.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fluctlight-mod-interface = { path = "../fluctlight-mod-interface" }
url = "2.2"
smallvec = { version = "1.8", features = ["serde"] }
http = "0.2.4"
bumpalo = { version = "3.9", features = ["collections"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
ed25519-compact = "1.0"
base64 = "0.13"
# Temporary; should be moved to fluctlight-main
# reqwest = { version = "0.11", features = ["blocking"]}
percent-encoding = "2.1"
sha2 = "0.10"
askama = "0.11"
breezy-timer = { version = "1.0", features = ["breezy_timer"] }
file-lock = "2.1"
flate2 = "1.0"
rayon = "1.5"
